--- a/Pages/index.html
+++ b/Pages/index.html
@@ -6,7 +6,7 @@
     </title>
 </head>
 <body>
-    <button onclick = "startgame()">
+    <button onclick = "startgame()", style="">
         start game
     </button>
     <script>
