--- a/Pages/game.html
+++ b/Pages/game.html
@@ -16,8 +16,10 @@
 
 <body>
   <!-- canvas of chess board with green and white squares -->
-  
-  <div id="board1" style="width: 400px"></div>
+  <!-- create a div and center everything inside it -->
+  <div style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
+    <div id="board1" style="width: 50%; "></div>
+  </div>
   <label>Status:</label>
   <div id="status"></div>
   <label>FEN:</label>
