uwu i fixy it now it worky

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -32,6 +32,20 @@
             transition: 0.5s;
 
         }
+        h1{
+            color: #e8e6e3;
+            border: none;
+            border-radius: 5px; 
+            padding: 10px;
+            font-size: 30px;
+            position: absolute;
+            top: 15%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-family: 'Source Code Pro', monospace;
+            font-weight: 400;
+            transition: 0.5s;
+        }
         button:hover{
           color: #fffdfa;
         }
@@ -39,6 +53,9 @@
     </style>
 </head>
 <body>
+  <h1 style="">
+      Illegal Chess
+    </h1>
     <button onclick = "startgame()">
         Play the Game
     </button>
@@ -61,7 +78,7 @@
       var phrases = ["Play the Game" , "Play the AI", "Fight the Ai", "Star Game", "Begin Game", "Begin AI", "Play", "Begin Engine"]
 
       var text = phrases[Math.floor(Math.random() * phrases.length)];
-      var letters = "abcdefghijklmnopqrstuvwxyz";
+      var letters = "abcdefghijklmnopqrstuvwxyz%$#@*?][{}]";
       let move = true;
       /*for(var i = 0; i < text.length; i++){
         newtext += letters[Math.floor(Math.random() * letters.length)];
